syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.digizol.grpc.java.ms.review.grpc";
option java_outer_classname = "ReviewServiceProto";

package com.digizol.grpc.java.ms.review.grpc;

service ReviewService {
  rpc getReviews(ProductId) returns (Reviews) {}
}

message ProductId {
  string id = 1;
}

message Review {
  int64 id = 1;
  string title = 2;
  string text = 3;
  int32 rating = 4;
}

message Reviews {
  repeated Review reviews = 1;
}